--- a/site/index.html
+++ b/site/index.html
@@ -9,6 +9,25 @@
 	<link href="https://fonts.googleapis.com/css?family=Heebo:400,400i,700|Titillium+Web:600" rel="stylesheet">
 	<link rel="stylesheet" href="dist/css/style.css">
 	<script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
+
+	<!-- Primary Meta Tags -->
+	<title>Strawberry - A new python GraphQL library</title>
+	<meta name="title" content="Strawberry - A new python GraphQL library">
+	<meta name="description" content="Checkout Strawberry, a new Python library for building GraphQL APIs, inspired by dataclasses.">
+
+	<!-- Open Graph / Facebook -->
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="http://strawberry.rocks/">
+	<meta property="og:title" content="Strawberry - A new python GraphQL library">
+	<meta property="og:description" content="Checkout Strawberry, a new Python library for building GraphQL APIs, inspired by dataclasses.">
+	<meta property="og:image" content="http://strawberry.rocks/code.png">
+
+	<!-- Twitter -->
+	<meta property="twitter:card" content="summary_large_image">
+	<meta property="twitter:url" content="http://strawberry.rocks/">
+	<meta property="twitter:title" content="Strawberry - A new python GraphQL library">
+	<meta property="twitter:description" content="Checkout Strawberry, a new Python library for building GraphQL APIs, inspired by dataclasses.">
+	<meta property="twitter:image" content="http://strawberry.rocks/code.png">
 </head>
 
 <body class="is-boxed">
