--- a/site/index.html
+++ b/site/index.html
@@ -28,6 +28,9 @@
 	<meta property="twitter:title" content="Strawberry - A new python GraphQL library">
 	<meta property="twitter:description" content="Checkout Strawberry, a new Python library for building GraphQL APIs, inspired by dataclasses.">
 	<meta property="twitter:image" content="http://strawberry.rocks/code.png">
+
+	<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+	<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
 </head>
 
 <body class="is-boxed">
