--- a/site/index.html
+++ b/site/index.html
@@ -241,7 +241,7 @@
 					<div class="cta-inner section-inner">
 						<div class="cta-content text-center">
 							<h2 class="section-title mt-0">Stay in the know</h2>
-							<p class="section-paragraph">Strawberry is currently being developer, register to the newsletter to be the first
+							<p class="section-paragraph">Strawberry is currently being developed, register to the newsletter to be the first
 								to know when it will be released.</p>
 							<div class="section-cta">
 								<a class="button button-primary button-shadow" target="_blank" href="http://eepurl.com/gc9mZ1">Subscribe to the
