--- a/strawberry/static/graphiql.html
+++ b/strawberry/static/graphiql.html
@@ -32,7 +32,7 @@
     <script src="https://cdn.jsdelivr.net/npm/graphiql-with-extensions@0.14.3/graphiqlWithExtensions.min.js"
         integrity="sha384-TqI6gT2PjmSrnEOTvGHLad1U4Vm5VoyzMmcKK0C/PLCWTnwPyXhCJY6NYhC/tp19"
         crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.umd.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.0-rc.2/dist/js.cookie.umd.min.js"></script>
 
     <!-- breaking changes in subscriptions-transport-ws since 0.9.0 -->
     <script src="https://cdn.jsdelivr.net/npm/subscriptions-transport-ws@0.8.3/browser/client.js"></script>
