--- a/strawberry/static/graphiql.html
+++ b/strawberry/static/graphiql.html
@@ -1,125 +1,105 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <title>Strawberry GraphiQL</title>
     <style>
-      body {
-        height: 100%;
-        margin: 0;
-        width: 100%;
-        overflow: hidden;
-      }
-
-      #graphiql {
-        height: 100vh;
-      }
-    </style>
-
-    <!-- For new subscriptions protocol -->
-    <script
-      src="https://unpkg.com/graphql-ws@5.3.0/umd/graphql-ws.min.js"
-      integrity="sha256-+Wr1pJE2beD7JgRoUsruBAqugBG/pwqdsmpaFvFzkI8="
-      crossorigin="anonymous"
-    ></script>
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/graphiql-with-extensions@0.14.3/graphiqlWithExtensions.css"
-      integrity="sha384-GBqwox+q8UtVEyBLBKloN5QDlBDsQnuoSUfMeJH1ZtDiCrrk103D7Bg/WjIvl4ya"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://unpkg.com/whatwg-fetch@2.0.3/fetch.js"
-      integrity="sha384-KaKx4aJnrltBb2dne61B/MRPA4uRfQvv6YW99RgjHax8TRjFxcC4BC19EEX0te/6"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://unpkg.com/react@16.8.6/umd/react.production.min.js"
-      integrity="sha384-qn+ML/QkkJxqn4LLs1zjaKxlTg2Bl/6yU/xBTJAgxkmNGc6kMZyeskAG0a7eJBR1"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://unpkg.com/react-dom@16.8.6/umd/react-dom.production.min.js"
-      integrity="sha384-85IMG5rvmoDsmMeWK/qUU4kwnYXVpC+o9hoHMLi4bpNR+gMEiPLrvkZCgsr7WWgV"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://unpkg.com/graphiql-with-extensions@0.14.3/graphiqlWithExtensions.min.js"
-      integrity="sha384-TqI6gT2PjmSrnEOTvGHLad1U4Vm5VoyzMmcKK0C/PLCWTnwPyXhCJY6NYhC/tp19"
-      crossorigin="anonymous"
-    ></script>
-    <script src="https://unpkg.com/js-cookie@3.0.0-rc.2/dist/js.cookie.umd.min.js"></script>
-
-    <!-- For legacy subscriptions protocol -->
-    <!-- breaking changes in subscriptions-transport-ws since 0.9.0 -->
-    <script
-      src="https://unpkg.com/subscriptions-transport-ws@0.8.3/browser/client.js"
-      integrity="sha256-WRZSI3qs3C8ssyixZhbf+m8CMBkpJ4YibcjX0MCNNyU="
-      crossorigin="anonymous"
-    ></script>
-
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/graphiql@1.4.2/graphiql.min.css"
-      integrity="sha256-Md3vdR7PDzWyo/aGfsFVF4tvS5/eAUWuIsg9QHUusCY="
-      crossorigin="anonymous"
-    />
-
-    <script
-      src="https://unpkg.com/graphiql-subscriptions-fetcher@0.0.2/browser/client.js"
-      integrity="sha384-ArTEHLNWIe9TuoDpFEtD/NeztNdWn3SdmWwMiAuZaSJeOaYypEGzeQoBxuPO+ORM"
-      crossorigin="anonymous"
-    ></script>
-  </head>
-
-  <body>
-    <div id="graphiql">Loading...</div>
-    netlify
-    <script
-      src="https://unpkg.com/graphiql@1.4.2/graphiql.min.js"
-      integrity="sha256-zSBU/wK/odOl/StUaKnjM+ziX9NAyJOyXI0fxvb3LVo="
-      crossorigin="anonymous"
-    ></script>
-
-    <script>
-      var fetchURL = window.location.href;
-
-      function httpUrlToWebSockeUrl(url) {
-        return url.replace(/(http)(s)?\:\/\//, "ws$2://");
-      }
-      var subscriptionsEndpoint = httpUrlToWebSockeUrl(fetchURL);
-
-      function fetcherSubscriptionParams() {
-        return {
-          wsClient: graphqlWs.createClient({
-            url: subscriptionsEndpoint,
-          }),
-        };
-      }
-
-      function fetcherHeaders() {
-        var headers = {
-          Accept: "application/json",
-          "Content-Type": "application/json",
-        };
-        var csrfToken = Cookies.get("csrftoken");
-        if (csrfToken) {
-          headers["x-csrftoken"] = csrfToken;
+        html,
+        body {
+            height: 100%;
+            margin: 0;
+            overflow: hidden;
+            width: 100%;
         }
 
-        return headers;
-      }
+        #graphiql {
+            height: 100vh;
+        }
+    </style>
 
-      var fetcher = GraphiQL.createFetcher({
-        url: fetchURL,
-        headers: fetcherHeaders(),
-        ...fetcherSubscriptionParams(),
-      });
-      ReactDOM.render(
-        React.createElement(GraphiQL, {
-          fetcher: fetcher,
-        }),
-        document.getElementById("graphiql")
-      );
+    <link rel="stylesheet"
+        href="https://unpkg.com/graphiql-with-extensions@0.14.3/graphiqlWithExtensions.css"
+        integrity="sha384-GBqwox+q8UtVEyBLBKloN5QDlBDsQnuoSUfMeJH1ZtDiCrrk103D7Bg/WjIvl4ya" crossorigin="anonymous" />
+    <script src="https://unpkg.com/whatwg-fetch@2.0.3/fetch.js"
+        integrity="sha384-KaKx4aJnrltBb2dne61B/MRPA4uRfQvv6YW99RgjHax8TRjFxcC4BC19EEX0te/6"
+        crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/react@16.8.6/umd/react.production.min.js"
+        integrity="sha384-qn+ML/QkkJxqn4LLs1zjaKxlTg2Bl/6yU/xBTJAgxkmNGc6kMZyeskAG0a7eJBR1"
+        crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/react-dom@16.8.6/umd/react-dom.production.min.js"
+        integrity="sha384-85IMG5rvmoDsmMeWK/qUU4kwnYXVpC+o9hoHMLi4bpNR+gMEiPLrvkZCgsr7WWgV"
+        crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/graphiql-with-extensions@0.14.3/graphiqlWithExtensions.min.js"
+        integrity="sha384-TqI6gT2PjmSrnEOTvGHLad1U4Vm5VoyzMmcKK0C/PLCWTnwPyXhCJY6NYhC/tp19"
+        crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/js-cookie@3.0.0-rc.2/dist/js.cookie.umd.min.js"></script>
+
+    <!-- breaking changes in subscriptions-transport-ws since 0.9.0 -->
+    <script src="https://unpkg.com/subscriptions-transport-ws@0.8.3/browser/client.js"></script>
+    <script src="https://unpkg.com/graphiql-subscriptions-fetcher@0.0.2/browser/client.js"></script>
+</head>
+
+<body>
+    <div id="graphiql"></div>
+    <script>
+        var fetchURL = window.location.href;
+
+        function httpUrlToWebSockeUrl(url) {
+            return url.replace(/(http)(s)?\:\/\//, "ws$2://");
+        }
+
+        function graphQLFetcher(graphQLParams) {
+            var headers = {
+                Accept: 'application/json',
+                'Content-Type': 'application/json',
+            };
+
+            var csrfToken = Cookies.get('csrftoken');
+            if (csrfToken) {
+              headers['x-csrftoken'] = csrfToken;
+            }
+
+            return fetch(fetchURL, {
+                method: 'post',
+                headers: headers,
+                body: JSON.stringify(graphQLParams),
+            })
+                .then(function (response) {
+                    return response.text();
+                })
+                .then(function (responseBody) {
+                    try {
+                        return JSON.parse(responseBody);
+                    } catch (error) {
+                        return responseBody;
+                    }
+                });
+        }
+
+        var subscriptionsEndpoint = httpUrlToWebSockeUrl(fetchURL);
+        var subscriptionsEnabled = JSON.parse('{{ SUBSCRIPTION_ENABLED }}')
+
+        const subscriptionsClient =
+            subscriptionsEnabled ? new window.SubscriptionsTransportWs.SubscriptionClient(
+                subscriptionsEndpoint,
+                {
+                    reconnect: true
+                }
+            ) : null;
+
+        const graphQLFetcherWithSubscriptions =
+            window.GraphiQLSubscriptionsFetcher.graphQLFetcher(
+                subscriptionsClient,
+                graphQLFetcher
+            );
+
+        ReactDOM.render(
+            React.createElement(GraphiQLWithExtensions.GraphiQLWithExtensions, {
+                fetcher: graphQLFetcherWithSubscriptions,
+            }),
+            document.getElementById('graphiql'),
+        );
     </script>
-  </body>
+</body>
+
 </html>
